--- a/sites/cms/composer.json
+++ b/sites/cms/composer.json
@@ -38,7 +38,7 @@
   "scripts": {
     "start": [
       "Composer\\Config::disableProcessTimeout",
-      "@php -S localhost:8000 kirby/router.php"
+      "@php -S localhost:8000 -t public vendor/getkirby/cms/router.php"
     ]
   }
 }
